# eg4-bridge

./: Cargo.toml  README.md  RELEASE_NOTES.md  config.yaml.example  docker-compose.yaml.example
python/: backup_inverter_config.py
src/: config.rs  database.rs  influx.rs  main.rs  mqtt.rs  scheduler.rs  utils.rs
src/coordinator/: mod.rs
src/coordinator/commands/: validation.rs
src/eg4/: inverter.rs  packet_decoder.rs
tests/: common.rs  test_config.rs  test_coordinator.rs  test_coordinator_commands_read_hold.rs  test_coordinator_commands_read_inputs.rs  test_coordinator_commands_read_param.rs  test_coordinator_commands_set_hold.rs  test_coordinator_commands_time_sync.rs  test_coordinator_commands_update_hold.rs  test_coordinator_read_inputs.rs  test_database.rs  test_home_assistant.rs  test_influx.rs  test_inverter.rs  test_mqtt_message.rs  test_packet_read_inputs.rs  test_packet_tcp_frames.rs
tests/test_packet_tcp_frames/: decoder.rs  golden.rs  main.rs
