[package]
name = "eg4-bridge"
version = "0.20.0-dev"
authors = ["Chris Elsworth <chris@cae.me.uk>", "Jared Mauch <jared@puck.nether.net>"]
edition = "2021"
repository = "https://github.com/jaredmauch/eg4-bridge"

[[bin]]
name = "eg4-bridge"
path = "src/main.rs"

[lib]
name = "eg4_bridge"
path = "src/lib.rs"

[features]
mocks = []

[dev-dependencies]
bytes = "1.5.0"
mockito = "1.3.0"
tempfile = "3.10.1"
tokio-util = { version = "0.7.10", features = ["codec"] }

[dependencies]
anyhow = "1.0.81"
bytes = "1.5.0"
clap = { version = "4.5.3", features = ["derive"] }
crc16 = "0.4.0"
# Not imported in code; keeps resolution off crypto-common 0.1.7, which pins generic-array to =0.14.7.
crypto-common = "=0.1.6"
env_logger = { version = "0.11.3", default-features = false, features = [] }
futures = "0.3.30"
log = "0.4.21"
socket2 = "0.6"
# Semver: >=8.0.0 and <9 (caret ^8.0); Cargo.lock will still pin the exact release (e.g. nom 8.0.0).
nom = { version = ">=8.0.0, <9", default-features = true, features = ["std"] }
# 0.11 with nom 8 is not on crates.io yet; track git until published.
nom-derive = { git = "https://github.com/rust-bakery/nom-derive.git", rev = "f68f464f50f7162483355e61a50ec2a7dae8044f" }
num_enum = "0.7.2"
rumqttc = { version = "0.25", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.6.1"
serde_json = "1.0.114"
serde_yaml = "0.9.32"
tokio = { version = "1.36.0", features = ["net", "macros", "signal", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
chrono = { version = "0.4.35", features = ["serde"] }
enum_dispatch = "0.3.12"
async-trait = "0.1.77"
influxdb-line-protocol = "2.0.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "any", "sqlite", "postgres", "mysql", "chrono", "migrate"] }
url = "2.5.0"
reqwest = "0.13.2"
